# BiofilmAnalysis

./: .gitignore  AGENTS.md  BiofilmAnalysis-Launch-Windows.bat  BiofilmAnalysis-Setup-Windows.bat  Makefile  README.md  pyproject.toml
scripts/: generate_demo_stack.py  install_desktop_launcher.sh  install_windows_shortcut.ps1  run_app.sh  run_app_windows.ps1  setup_environment.sh  setup_windows.ps1  windows_launcher.ps1
src/biofilm_analyzer/: __init__.py  __main__.py  analysis.py  app.py  demo.py  desktop_launcher.py  io.py
tests/: test_analysis.py  test_app_preview.py  test_demo.py  test_desktop_launcher.py  test_io.py
